--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>List Test</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>List Test Example</noscript>
+    
+    <div class="bar">
+      <span class="bar-item w3-button">List View</span>
+    </div>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
